new capture_png magic

--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -32,7 +32,41 @@
     "params = \" -v WARNING -r 80,40 -s  --disable_caching Example\"\n",
     "params = f\" -v WARNING -r {80*4},{40*4} -s  --disable_caching Example\"\n",
     "\n",
-    "name_snippet_pairs = {}"
+    "name_snippet_pairs = {}\n",
+    "\n",
+    "from base64 import b64decode\n",
+    "from io import BytesIO\n",
+    "\n",
+    "from IPython import get_ipython\n",
+    "from IPython.core.magic import register_cell_magic\n",
+    "import PIL\n",
+    "\n",
+    "@register_cell_magic\n",
+    "def capture_png(line, cell):\n",
+    "    get_ipython().run_cell_magic(\n",
+    "        'capture',\n",
+    "        ' --no-stderr --no-stdout result',\n",
+    "        cell\n",
+    "    )\n",
+    "    out_paths = line.strip().split(' ')\n",
+    "    for output in result.outputs:\n",
+    "        display(output)\n",
+    "        data = output.data\n",
+    "        if 'image/png' in data:\n",
+    "            path = out_paths.pop(0)\n",
+    "            path = path.split(\".png\")[0] + str(time.time_ns()) + \".png\"\n",
+    "            if not path:\n",
+    "                raise ValueError('Too few paths given!')\n",
+    "            png_bytes = data['image/png']\n",
+    "            if isinstance(png_bytes, str):\n",
+    "                png_bytes = b64decode(png_bytes)\n",
+    "            assert isinstance(png_bytes, bytes)\n",
+    "            bytes_io = BytesIO(png_bytes)\n",
+    "            image = PIL.Image.open(bytes_io)\n",
+    "            image.save(path, 'png')\n",
+    "        \n",
+    "path = Path.cwd() / \"temp\"\n",
+    "path.mkdir(parents=False, exist_ok=True)"
    ]
   },
   {
@@ -53,6 +87,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -84,6 +119,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -114,6 +150,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -145,6 +182,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -175,6 +213,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -205,6 +244,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "\n",
     "class Example(ZoomedScene):\n",
@@ -245,6 +285,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "MathTex.set_default()\n",
     "class Example(ZoomedScene):\n",
@@ -281,6 +322,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -299,61 +341,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7150aa82-899b-49cd-bcad-344ef8bb3e9c",
-   "metadata": {},
-   "source": [
-    "# Save here!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install ipylab\n",
-    "from ipylab import JupyterFrontEnd\n",
-    "\n",
-    "app = JupyterFrontEnd()\n",
-    "app.commands.execute('docmanager:save')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name = \"Mobjects_Text\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
+   "id": "e5e50a51-796e-4f0d-8091-d932740aaf6b",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: Mobjects_Text_files: No such file or directory\n",
-      "[NbConvertApp] Converting notebook Mobjects_Text.ipynb to markdown\n",
-      "[NbConvertApp] Support files will be in Mobjects_Text_files/\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Writing 7402 bytes to Mobjects_Text.md\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -372,15 +364,11 @@
     }
    ],
    "source": [
-    "folder_name = file_name + \"_files\"\n",
-    "notebook_name = file_name + \".ipynb\"\n",
-    "markdown_name = file_name + \".md\"\n",
-    "!rm -r $folder_name\n",
-    "!jupyter nbconvert $notebook_name --to markdown\n",
-    "!rm -r $markdown_name\n",
-    "base_directory = Path.cwd() / folder_name\n",
+    "# save here\n",
+    "base_directory = Path.cwd() / \"temp\"\n",
     "target_directory = Path.cwd() / \"imgs\"\n",
     "target_directory.mkdir(parents=True, exist_ok=True)\n",
+    "file_name = \"Mobjects_Text\"\n",
     "\n",
     "prefix = file_name # delete files that where created in the past \n",
     "for file in target_directory.rglob(\"*\"):\n",
@@ -394,9 +382,9 @@
     "    to_path = target_directory /  f\"{file_name}_{num:03}_{des}\"   \n",
     "    shutil.copy(p,  to_path)\n",
     "    new_keys.append(to_path.name)\n",
-    "    \n",
     "new_name_snippet_pairs ={} \n",
     "new_values = list(name_snippet_pairs.values())\n",
+    "\n",
     "for key, value in zip(new_keys,new_values):\n",
     "    if value.startswith(\"\\n\"):\n",
     "        value = value[1:]\n",
@@ -406,17 +394,9 @@
     "with open(f'imgs/{file_name}.json', 'w') as fp:\n",
     "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
     "display(new_name_snippet_pairs)\n",
-    "!rm -r $folder_name\n",
+    "!rm -r $base_directory\n",
     "!git add ."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be8e4efe-ee83-4276-8861-58558890748b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
