added ending line

--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -2,26 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.12.0</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m12.0\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from manim import *\n",
     "from pathlib import Path\n",
@@ -65,13 +49,13 @@
     "            image = PIL.Image.open(bytes_io)\n",
     "            image.save(path, 'png')\n",
     "        \n",
-    "path = Path.cwd() / \"temp\"\n",
-    "path.mkdir(parents=False, exist_ok=True)"
+    "temp_path = Path.cwd() / \"temp\"\n",
+    "temp_path.mkdir(parents=False, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -103,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "83dea982-bd01-4677-8f52-c0c0cc03b294",
    "metadata": {},
    "outputs": [
@@ -134,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "6b947937-3554-42af-95d5-cc07a958b0bc",
    "metadata": {},
    "outputs": [
@@ -166,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "3d6c9d9f-d32d-4811-8b47-2d768d062624",
    "metadata": {},
    "outputs": [
@@ -197,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "38447001-be94-4df2-b101-645036c6c3a1",
    "metadata": {},
    "outputs": [
@@ -228,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "0e138520-2111-459b-801a-a074c36587d2",
    "metadata": {},
    "outputs": [
@@ -269,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "f5c9059c-f2dc-4219-b5bb-f8bcea454323",
    "metadata": {},
    "outputs": [
@@ -306,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "91267955-c0a4-4184-8149-6b71e6c3158a",
    "metadata": {},
    "outputs": [
@@ -342,21 +326,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "e5e50a51-796e-4f0d-8091-d932740aaf6b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Mobjects_Text_000_Text1.png': 'mob = Text(\"Hello\", color=WHITE)',\n",
-       " 'Mobjects_Text_001_Text2.png': 'mob = Text(\"World\", color=YELLOW,slant=ITALIC)',\n",
-       " 'Mobjects_Text_002_Underline.png': 't = Tex(\"YES\")\\nul = Underline(t, color=YELLOW)',\n",
-       " 'Mobjects_Text_003_Bold.png': 'mob = Text(\"NO\", color=YELLOW,weight=BOLD)',\n",
-       " 'Mobjects_Text_004_MathTex.png': 'mob = MathTex(r\"\\\\Psi(x)\", color=WHITE)',\n",
-       " 'Mobjects_Text_005_MathTex_stix2.png': 'stix2 = TexTemplate()\\nstix2.add_to_preamble(r\"\\\\usepackage{stix2}\", prepend= True)\\nMathTex.set_default(tex_template=stix2)\\nmob = MathTex(r\"\\\\Psi(x)\", color=WHITE)',\n",
-       " 'Mobjects_Text_006_MathTex2.png': 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\")\\nmob.set_color_by_tex(\"x\", YELLOW)',\n",
-       " 'Mobjects_Text_007_Check.png': 'check= Tex(r\"\\\\checkmark\", color= GREEN, stroke_width=8).scale(3)\\ncheck.stretch(0.8, dim = 1)\\ncheck.stretch(1.1, dim = 0)'}"
+       "{'Mobjects_Text_000_Text1.png': 'mob = Text(\"Hello\", color=WHITE)\\n',\n",
+       " 'Mobjects_Text_001_Text2.png': 'mob = Text(\"World\", color=YELLOW,slant=ITALIC)\\n',\n",
+       " 'Mobjects_Text_002_Underline.png': 't = Tex(\"YES\")\\nul = Underline(t, color=YELLOW)\\n',\n",
+       " 'Mobjects_Text_003_Bold.png': 'mob = Text(\"NO\", color=YELLOW,weight=BOLD)\\n',\n",
+       " 'Mobjects_Text_004_MathTex.png': 'mob = MathTex(r\"\\\\Psi(x)\", color=WHITE)\\n',\n",
+       " 'Mobjects_Text_005_MathTex_stix2.png': 'stix2 = TexTemplate()\\nstix2.add_to_preamble(r\"\\\\usepackage{stix2}\", prepend= True)\\nMathTex.set_default(tex_template=stix2)\\nmob = MathTex(r\"\\\\Psi(x)\", color=WHITE)\\n',\n",
+       " 'Mobjects_Text_006_MathTex2.png': 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\")\\nmob.set_color_by_tex(\"x\", YELLOW)\\n',\n",
+       " 'Mobjects_Text_007_Check.png': 'check= Tex(r\"\\\\checkmark\", color= GREEN, stroke_width=8).scale(3)\\ncheck.stretch(0.8, dim = 1)\\ncheck.stretch(1.1, dim = 0)\\n'}"
       ]
      },
      "metadata": {},
@@ -365,7 +349,7 @@
    ],
    "source": [
     "# save here\n",
-    "base_directory = Path.cwd() / \"temp\"\n",
+    "base_directory = temp_path\n",
     "target_directory = Path.cwd() / \"imgs\"\n",
     "target_directory.mkdir(parents=True, exist_ok=True)\n",
     "file_name = \"Mobjects_Text\"\n",
@@ -390,6 +374,7 @@
     "        value = value[1:]\n",
     "    if value.endswith(\"\\n\"):\n",
     "        value = value[:-1]\n",
+    "    value += \"\\n\"\n",
     "    new_name_snippet_pairs[key]=value\n",
     "with open(f'imgs/{file_name}.json', 'w') as fp:\n",
     "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
@@ -397,6 +382,14 @@
     "!rm -r $base_directory\n",
     "!git add ."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22b4ecd9-bdaa-448c-bbf2-578e0ca4ad97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
