--- a/Plots.ipynb
+++ b/Plots.ipynb
@@ -23,12 +23,48 @@
     }
    ],
    "source": [
-    "from manim import *\n",
-    "from pathlib import Path\n",
-    "import shutil\n",
-    "import time\n",
     "import json\n",
     "import os\n",
+    "import shutil\n",
+    "import time\n",
+    "from base64 import b64decode\n",
+    "from io import BytesIO\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import PIL\n",
+    "from IPython import get_ipython\n",
+    "from IPython.core.magic import register_cell_magic\n",
+    "from manim import *\n",
+    "\n",
+    "@register_cell_magic\n",
+    "def capture_png(line, cell):\n",
+    "    get_ipython().run_cell_magic(\n",
+    "        'capture',\n",
+    "        ' --no-stderr --no-stdout result',\n",
+    "        cell\n",
+    "    )\n",
+    "    out_paths = line.strip().split(' ')\n",
+    "    for output in result.outputs:\n",
+    "        display(output)\n",
+    "        data = output.data\n",
+    "        if 'image/png' in data:\n",
+    "            path = out_paths.pop(0)\n",
+    "            path = path.split(\".png\")[0] + str(time.time_ns()) + \".png\"\n",
+    "            if not path:\n",
+    "                raise ValueError('Too few paths given!')\n",
+    "            png_bytes = data['image/png']\n",
+    "            if isinstance(png_bytes, str):\n",
+    "                png_bytes = b64decode(png_bytes)\n",
+    "            assert isinstance(png_bytes, bytes)\n",
+    "            bytes_io = BytesIO(png_bytes)\n",
+    "            image = PIL.Image.open(bytes_io)\n",
+    "            image.save(path, 'png')\n",
+    "        \n",
+    "temp_path = Path.cwd() / \"temp\"\n",
+    "temp_path.mkdir(parents=False, exist_ok=True)\n",
+    "\n",
+    "\n",
+    "\n",
     "scale_res=1\n",
     "scale_res=4\n",
     "\n",
@@ -55,6 +91,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -111,6 +148,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene): \n",
     "    def __init__(self, **kwargs):\n",
@@ -207,6 +245,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -247,6 +286,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -289,6 +329,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -337,6 +378,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -372,6 +414,7 @@
     }
    ],
    "source": [
+    "%%capture_png temp/example.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -399,70 +442,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7150aa82-899b-49cd-bcad-344ef8bb3e9c",
-   "metadata": {},
-   "source": [
-    "# Save here!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install ipylab\n",
-    "from ipylab import JupyterFrontEnd\n",
-    "\n",
-    "app = JupyterFrontEnd()\n",
-    "app.commands.execute('docmanager:save')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name = \"Plots\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: Plots_files: No such file or directory\n",
-      "[NbConvertApp] Converting notebook Plots.ipynb to markdown\n",
-      "[NbConvertApp] Support files will be in Plots_files/\n",
-      "[NbConvertApp] Making directory Plots_files\n",
-      "[NbConvertApp] Making directory Plots_files\n",
-      "[NbConvertApp] Making directory Plots_files\n",
-      "[NbConvertApp] Making directory Plots_files\n",
-      "[NbConvertApp] Making directory Plots_files\n",
-      "[NbConvertApp] Making directory Plots_files\n",
-      "[NbConvertApp] Making directory Plots_files\n",
-      "[NbConvertApp] Writing 12868 bytes to Plots.md\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'Plots_000_Axes_e_x.png': 'axes = Axes(\\n    x_range=[-8, 9, 2],\\n    y_range=[-6, 7, 2],\\n    x_length=4,\\n    y_length=4,\\n    axis_config={\"include_numbers\": True, \"numbers_to_exclude\": [0]},\\n    x_axis_config={\"color\": ORANGE},\\n    y_axis_config={\"color\": ORANGE},\\n)\\naxes_label = axes.get_axis_labels(x_label=\"x\", y_label=\"f(x)\")\\ngraph = axes.plot(lambda x: 5*np.e ** (-x**2/2), x_range=[-5, 5], color=YELLOW)\\ngraph_label = axes.get_graph_label(graph, label=\"e^{-x^2}\", color=YELLOW, x_val=1,dot=False)\\nself.add(axes, graph, graph_label, axes_label)',\n",
-       " 'Plots_001_Axes_zoom.png': 'class Example(ZoomedScene): \\n    def __init__(self, **kwargs):\\n        ZoomedScene.__init__(\\n            self,\\n            zoom_factor=0.1,\\n            zoomed_display_height=6,\\n            zoomed_display_width=3,\\n            image_frame_stroke_width=20,\\n            zoomed_camera_config={\\n                \"default_frame_stroke_width\": 3,\\n            },\\n            **kwargs\\n        )    \\n\\n    def construct(self):\\n        self.activate_zooming(animate=False)\\n\\n        ax = Axes(\\n            x_range=[0, 10, 2],\\n            y_range=[0,10, 2],\\n            x_length=2,\\n            y_length=2,\\n            x_axis_config={\"color\": ORANGE},\\n            y_axis_config={\"color\": ORANGE},\\n        )\\n        ax.shift(DL)\\n        x_vals = [0, 1, 2, 3,4,5]\\n        y_vals = [2, -1, 4, 2, 4, 1]\\n        graph = ax.plot_line_graph(x_values=x_vals, y_values=y_vals)\\n        self.zoomed_camera.frame.move_to(graph.get_top()+0.1*DL)\\n        self.zoomed_display.shift(3*LEFT+0.4*UP)\\n        self.camera.frame.scale(1/2)\\n        self.camera.frame.shift(UR*1)\\n        self.add(ax, graph)',\n",
-       " 'Plots_002_ComplexPlane.png': 'plane = ComplexPlane().add_coordinates()\\nd1 = Dot(plane.n2p(2 + 1j), color=YELLOW)\\nd2 = Dot(plane.n2p(-3 - 2j), color=YELLOW)\\nlabel1 = MathTex(\"2+i\").next_to(d1, UR, 0.1)\\nlabel2 = MathTex(\"-3-2i\").next_to(d2, UR, 0.1)',\n",
-       " 'Plots_003_PolarPlane.png': 'polarplane_pi = PolarPlane(\\n            azimuth_units=\"PI radians\",\\n            size=6,\\n            azimuth_label_font_size=33.6,\\n            radius_config={\"font_size\": 33.6},\\n        ).add_coordinates()',\n",
-       " 'Plots_004_Graph_with_Number.png': 'vertices = [1, 2, 3, 4, 5, 6, 7, 8]\\nedges = [(1, 7), (1, 8), (2, 3), (2, 4), (2, 5),\\n         (2, 8), (3, 4), (6, 1), (6, 2),\\n         (6, 3), (7, 2), (7, 4)]\\ng = Graph(vertices, edges, layout=\"circular\", layout_scale=3,\\n          labels=True, vertex_config={7: {\"fill_color\": RED}},\\n          edge_config={(1, 7): {\"stroke_color\": RED},\\n                       (2, 7): {\"stroke_color\": RED},\\n                       (4, 7): {\"stroke_color\": RED}})',\n",
-       " 'Plots_005_StreamLines.png': 'func = lambda pos: ((pos[0]*UR+pos[1]*LEFT) - pos)\\nmob= StreamLines(func,delta_x=1, delta_y=1,stroke_width=3)\\nself.add(mob)',\n",
-       " 'Plots_006_ArrowVectorField.png': 'func = lambda pos: np.sin(pos[1])*RIGHT+np.cos(pos[0])*UP\\nmob = ArrowVectorField(func)'}"
+       "{'Plots_000_Axes_e_x.png': 'axes = Axes(\\n    x_range=[-8, 9, 2],\\n    y_range=[-6, 7, 2],\\n    x_length=4,\\n    y_length=4,\\n    axis_config={\"include_numbers\": True, \"numbers_to_exclude\": [0]},\\n    x_axis_config={\"color\": ORANGE},\\n    y_axis_config={\"color\": ORANGE},\\n)\\naxes_label = axes.get_axis_labels(x_label=\"x\", y_label=\"f(x)\")\\ngraph = axes.plot(lambda x: 5*np.e ** (-x**2/2), x_range=[-5, 5], color=YELLOW)\\ngraph_label = axes.get_graph_label(graph, label=\"e^{-x^2}\", color=YELLOW, x_val=1,dot=False)\\nself.add(axes, graph, graph_label, axes_label)\\n',\n",
+       " 'Plots_001_Axes_zoom.png': 'class Example(ZoomedScene): \\n    def __init__(self, **kwargs):\\n        ZoomedScene.__init__(\\n            self,\\n            zoom_factor=0.1,\\n            zoomed_display_height=6,\\n            zoomed_display_width=3,\\n            image_frame_stroke_width=20,\\n            zoomed_camera_config={\\n                \"default_frame_stroke_width\": 3,\\n            },\\n            **kwargs\\n        )    \\n\\n    def construct(self):\\n        self.activate_zooming(animate=False)\\n\\n        ax = Axes(\\n            x_range=[0, 10, 2],\\n            y_range=[0,10, 2],\\n            x_length=2,\\n            y_length=2,\\n            x_axis_config={\"color\": ORANGE},\\n            y_axis_config={\"color\": ORANGE},\\n        )\\n        ax.shift(DL)\\n        x_vals = [0, 1, 2, 3,4,5]\\n        y_vals = [2, -1, 4, 2, 4, 1]\\n        graph = ax.plot_line_graph(x_values=x_vals, y_values=y_vals)\\n        self.zoomed_camera.frame.move_to(graph.get_top()+0.1*DL)\\n        self.zoomed_display.shift(3*LEFT+0.4*UP)\\n        self.camera.frame.scale(1/2)\\n        self.camera.frame.shift(UR*1)\\n        self.add(ax, graph)\\n',\n",
+       " 'Plots_002_ComplexPlane.png': 'plane = ComplexPlane().add_coordinates()\\nd1 = Dot(plane.n2p(2 + 1j), color=YELLOW)\\nd2 = Dot(plane.n2p(-3 - 2j), color=YELLOW)\\nlabel1 = MathTex(\"2+i\").next_to(d1, UR, 0.1)\\nlabel2 = MathTex(\"-3-2i\").next_to(d2, UR, 0.1)\\n',\n",
+       " 'Plots_003_PolarPlane.png': 'polarplane_pi = PolarPlane(\\n            azimuth_units=\"PI radians\",\\n            size=6,\\n            azimuth_label_font_size=33.6,\\n            radius_config={\"font_size\": 33.6},\\n        ).add_coordinates()\\n',\n",
+       " 'Plots_004_Graph_with_Number.png': 'vertices = [1, 2, 3, 4, 5, 6, 7, 8]\\nedges = [(1, 7), (1, 8), (2, 3), (2, 4), (2, 5),\\n         (2, 8), (3, 4), (6, 1), (6, 2),\\n         (6, 3), (7, 2), (7, 4)]\\ng = Graph(vertices, edges, layout=\"circular\", layout_scale=3,\\n          labels=True, vertex_config={7: {\"fill_color\": RED}},\\n          edge_config={(1, 7): {\"stroke_color\": RED},\\n                       (2, 7): {\"stroke_color\": RED},\\n                       (4, 7): {\"stroke_color\": RED}})\\n',\n",
+       " 'Plots_005_StreamLines.png': 'func = lambda pos: ((pos[0]*UR+pos[1]*LEFT) - pos)\\nmob= StreamLines(func,delta_x=1, delta_y=1,stroke_width=3)\\nself.add(mob)\\n',\n",
+       " 'Plots_006_ArrowVectorField.png': 'func = lambda pos: np.sin(pos[1])*RIGHT+np.cos(pos[0])*UP\\nmob = ArrowVectorField(func)\\n'}"
       ]
      },
      "metadata": {},
@@ -470,13 +464,9 @@
     }
    ],
    "source": [
-    "folder_name = file_name + \"_files\"\n",
-    "notebook_name = file_name + \".ipynb\"\n",
-    "markdown_name = file_name + \".md\"\n",
-    "!rm -r $folder_name\n",
-    "!jupyter nbconvert $notebook_name --to markdown\n",
-    "!rm -r $markdown_name\n",
-    "base_directory = Path.cwd() / folder_name\n",
+    " # save here\n",
+    "file_name = \"Plots\"\n",
+    "base_directory = temp_path\n",
     "target_directory = Path.cwd() / \"imgs\"\n",
     "target_directory.mkdir(parents=True, exist_ok=True)\n",
     "\n",
@@ -492,37 +482,22 @@
     "    to_path = target_directory /  f\"{file_name}_{num:03}_{des}\"   \n",
     "    shutil.copy(p,  to_path)\n",
     "    new_keys.append(to_path.name)\n",
-    "    \n",
     "new_name_snippet_pairs ={} \n",
     "new_values = list(name_snippet_pairs.values())\n",
+    "\n",
     "for key, value in zip(new_keys,new_values):\n",
     "    if value.startswith(\"\\n\"):\n",
     "        value = value[1:]\n",
     "    if value.endswith(\"\\n\"):\n",
     "        value = value[:-1]\n",
+    "    value += \"\\n\"\n",
     "    new_name_snippet_pairs[key]=value\n",
     "with open(f'imgs/{file_name}.json', 'w') as fp:\n",
     "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
     "display(new_name_snippet_pairs)\n",
-    "!rm -r $folder_name\n",
+    "!rm -r $base_directory\n",
     "!git add ."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be8e4efe-ee83-4276-8861-58558890748b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fcb9430-2861-4513-be77-0e5d54916bfe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
