--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.13.0</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m13.0\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import json\n",
     "import os\n",
@@ -55,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -87,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "83dea982-bd01-4677-8f52-c0c0cc03b294",
    "metadata": {},
    "outputs": [
@@ -118,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "6b947937-3554-42af-95d5-cc07a958b0bc",
    "metadata": {},
    "outputs": [
@@ -150,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "3d6c9d9f-d32d-4811-8b47-2d768d062624",
    "metadata": {},
    "outputs": [
@@ -181,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "38447001-be94-4df2-b101-645036c6c3a1",
    "metadata": {},
    "outputs": [
@@ -212,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "0e138520-2111-459b-801a-a074c36587d2",
    "metadata": {},
    "outputs": [
@@ -253,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "f5c9059c-f2dc-4219-b5bb-f8bcea454323",
    "metadata": {},
    "outputs": [
@@ -290,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "91267955-c0a4-4184-8149-6b71e6c3158a",
    "metadata": {},
    "outputs": [
@@ -326,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "e5e50a51-796e-4f0d-8091-d932740aaf6b",
    "metadata": {},
    "outputs": [
