--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -2,34 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.13.0</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m13.0\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from manim import *\n",
-    "params = f\" -v WARNING -r {80*4},{40*4} -s  --disable_caching Example\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "e64dbae4",
    "metadata": {},
    "outputs": [],
@@ -40,7 +13,8 @@
     "from io import BytesIO, StringIO\n",
     "from IPython import get_ipython\n",
     "from IPython.core.magic import register_cell_magic\n",
-    "\n",
+    "from manim import *\n",
+    "params = f\" -v WARNING -r {80*4},{40*4} -s  --disable_caching Example\"\n",
     "import PIL\n",
     "\n",
     "\n",
@@ -123,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "eb865a37",
    "metadata": {},
    "outputs": [],
@@ -134,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -161,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "83dea982-bd01-4677-8f52-c0c0cc03b294",
    "metadata": {},
    "outputs": [
@@ -188,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "6b947937-3554-42af-95d5-cc07a958b0bc",
    "metadata": {},
    "outputs": [
@@ -216,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "3d6c9d9f-d32d-4811-8b47-2d768d062624",
    "metadata": {},
    "outputs": [
@@ -243,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "38447001-be94-4df2-b101-645036c6c3a1",
    "metadata": {},
    "outputs": [
@@ -270,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "0e138520-2111-459b-801a-a074c36587d2",
    "metadata": {},
    "outputs": [
@@ -301,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "f5c9059c-f2dc-4219-b5bb-f8bcea454323",
    "metadata": {},
    "outputs": [
@@ -330,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "91267955-c0a4-4184-8149-6b71e6c3158a",
    "metadata": {},
    "outputs": [
