--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "e64dbae4",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
     "    style = style.strip()\n",
     "    style = style.strip('\"')  # remove quotes\n",
     "\n",
-    "    default_style = \"border: 3px solid #008DD5;\"\n",
+    "    default_style = \"\"\n",
     "\n",
     "    style = default_style + style\n",
     "\n",
@@ -92,23 +92,23 @@
     "            assert isinstance(png_bytes, bytes)\n",
     "            bytes_io = BytesIO(png_bytes)\n",
     "            image = PIL.Image.open(bytes_io)\n",
-    "            image.save(path, 'png')\n"
+    "            image.save(path, 'png')\n",
+    "\n",
+    "joson_file_path = \"imgs/gallery_parameters.json\"\n",
+    "chapter_name = \"Mobject Text\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "eb865a37",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "joson_file_path = \"imgs/gallery_parameters.json\"\n",
-    "chapter_name = \"Mobject Text\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "83dea982-bd01-4677-8f52-c0c0cc03b294",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "6b947937-3554-42af-95d5-cc07a958b0bc",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "3d6c9d9f-d32d-4811-8b47-2d768d062624",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "38447001-be94-4df2-b101-645036c6c3a1",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "0e138520-2111-459b-801a-a074c36587d2",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "f5c9059c-f2dc-4219-b5bb-f8bcea454323",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "91267955-c0a4-4184-8149-6b71e6c3158a",
    "metadata": {},
    "outputs": [
@@ -331,6 +331,14 @@
     "        self.add(check)\n",
     "image_full_name = \"Check.png\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "764b60f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
