--- a/Camera_and_Style.ipynb
+++ b/Camera_and_Style.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "91267955-c0a4-4184-8149-6b71e6c3158a",
    "metadata": {},
    "outputs": [
@@ -151,14 +151,13 @@
     "        mob = Tex(r\"\\textbf{Zoom \\\\ IN}\", color=YELLOW)\n",
     "        #needs ZoomedScene #ONLY\n",
     "        self.camera.frame.scale(0.6) #ONLY\n",
-    "\n",
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "c05ff57a-5c0e-4c47-89eb-1291957b9058",
    "metadata": {},
    "outputs": [
@@ -174,27 +173,21 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/example.png\n",
+    "%%capture_png imgs/ZoomOUT.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        mob = Tex(r\"\\textbf{Zoom \\\\ OUT}\", color=YELLOW)\n",
-    "        self.camera.frame.scale(1.2)\n",
+    "        # needs ZoomedScene #ONLY\n",
+    "        self.camera.frame.scale(1.2) #ONLY\n",
     "\n",
     "        self.add(mob)\n",
-    "        self.camera.frame.scale(1/4)\n",
-    "\n",
-    "###******        \n",
-    "image_full_name = \"ZoomOUT.png\"\n",
-    "snippet = \"\"\"\n",
-    "self.camera.frame.scale(1.2) # needs ZoomedScene\n",
-    "\"\"\"\n",
-    "name_snippet_pairs[image_full_name] = snippet"
+    "        self.camera.frame.scale(1/4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "9081dc78-4d62-43b9-8d9e-3d0ee2ac1ebd",
    "metadata": {},
    "outputs": [
@@ -210,26 +203,20 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/example.png\n",
+    "%%capture_png imgs/CameraLEFT.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        mob = Tex(r\"\\textbf{Camera \\\\ shift LEFT}\", color=YELLOW)\n",
-    "        self.camera.frame.shift(LEFT*0.5)\n",
+    "        # needs ZoomedScene #ONLY\n",
+    "        self.camera.frame.shift(LEFT*0.5) #ONLY\n",
     "        self.add(mob)\n",
-    "        self.camera.frame.scale(1/3.5)\n",
-    "\n",
-    "###******        \n",
-    "image_full_name = \"CameraLEFT.png\"\n",
-    "snippet = \"\"\"\n",
-    "self.camera.frame.shift(LEFT*0.5) # needs ZoomedScene\n",
-    "\"\"\"\n",
-    "name_snippet_pairs[image_full_name] = snippet"
+    "        self.camera.frame.scale(1/3.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "18d57f08-f2cf-4669-9fc1-ff8bfc9923f5",
    "metadata": {},
    "outputs": [
@@ -245,26 +232,20 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/example.png\n",
+    "%%capture_png imgs/CameraUP.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        mob = Tex(r\"\\textbf{Camera \\\\ shift UP}\", color=YELLOW)\n",
-    "        self.camera.frame.shift(UP*0.4)\n",
+    "        # needs ZoomedScene #ONLY\n",
+    "        self.camera.frame.shift(UP*0.4) #ONLY\n",
     "        self.add(mob)\n",
-    "        self.camera.frame.scale(1/3.5)\n",
-    "\n",
-    "###******        \n",
-    "image_full_name = \"CameraUP.png\"\n",
-    "snippet = \"\"\"\n",
-    "self.camera.frame.shift(UP*0.4) # needs ZoomedScene\n",
-    "\"\"\"\n",
-    "name_snippet_pairs[image_full_name] = snippet"
+    "        self.camera.frame.scale(1/3.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "13920380-cc5a-4b29-8b04-e09234087006",
    "metadata": {},
    "outputs": [
@@ -280,26 +261,19 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/example.png\n",
+    "%%capture_png imgs/MatchHEIGHT.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        mob = Tex(r\"\\textbf{Scale \\\\ to \\\\ HEIGHT}\", color=YELLOW)\n",
     "        self.add(mob)\n",
-    "        self.camera.frame.height =  mob.height + 3*SMALL_BUFF\n",
-    "\n",
-    "        \n",
-    "###******        \n",
-    "image_full_name = \"MatchHEIGHT.png\"\n",
-    "snippet = \"\"\"\n",
-    "self.camera.frame.height =  mob.height + 3*SMALL_BUFF # needs ZoomedScene\n",
-    "\"\"\"\n",
-    "name_snippet_pairs[image_full_name] = snippet"
+    "        # needs ZoomedScene #ONLY\n",
+    "        self.camera.frame.height =  mob.height + 3*SMALL_BUFF #ONLY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "9c1c3bdb-969f-4f0b-af22-3987d2622205",
    "metadata": {},
    "outputs": [
@@ -315,25 +289,19 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/example.png\n",
+    "%%capture_png imgs/MatchWIDTH.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        mob = Tex(r\"\\textbf{Scale to  \\\\ WIDTH}\", color=YELLOW)\n",
     "        self.add(mob)\n",
-    "        self.camera.frame.width =  mob.width + 3*SMALL_BUFF \n",
-    "        \n",
-    "###******        \n",
-    "image_full_name = \"MatchWIDTH.png\"\n",
-    "snippet = \"\"\"\n",
-    "self.camera.frame.width =  mob.width + 3*SMALL_BUFF # needs ZoomedScene\n",
-    "\"\"\"\n",
-    "name_snippet_pairs[image_full_name] = snippet"
+    "        # needs ZoomedScene #ONLY\n",
+    "        self.camera.frame.width =  mob.width + 3*SMALL_BUFF  #ONLY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "c185b1ae-23fa-46d5-a7de-ef5efa071770",
    "metadata": {},
    "outputs": [
@@ -349,24 +317,17 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/example.png\n",
+    "%%capture_png imgs/FullScreenRectangle.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
-    "        mob = FullScreenRectangle(stroke_width=200, color= YELLOW)\n",
-    "        self.add(mob)\n",
-    "\n",
-    "###******        \n",
-    "image_full_name = \"FullScreenRectangle.png\"\n",
-    "snippet = \"\"\"\n",
-    "mob = FullScreenRectangle(stroke_width=200, color= YELLOW)\n",
-    "\"\"\"\n",
-    "name_snippet_pairs[image_full_name] = snippet"
+    "        mob = FullScreenRectangle(stroke_width=200, color= YELLOW) #ONLY\n",
+    "        self.add(mob)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "fd9e6794-9c74-498f-afa5-6f385816abdd",
    "metadata": {},
    "outputs": [
@@ -382,28 +343,19 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/example.png\n",
+    "%%capture_png imgs/SurroundingRectangle.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
-    "        inner = Tex(r\"\\textbf{Hello}\", color=WHITE)\n",
-    "        mob = SurroundingRectangle(inner, corner_radius=0.1)\n",
+    "        inner = Tex(r\"\\textbf{Hello}\", color=WHITE) #ONLY\n",
+    "        mob = SurroundingRectangle(inner, corner_radius=0.1) #ONLY\n",
     "        self.add(mob,inner)\n",
-    "        self.camera.frame.scale(1/8)\n",
-    "\n",
-    "\n",
-    "###******        \n",
-    "image_full_name = \"SurroundingRectangle.png\"\n",
-    "snippet = r\"\"\"\n",
-    "inner = Tex(r\"\\textbf{Hello}\", color=WHITE)\n",
-    "mob = SurroundingRectangle(inner, corner_radius=0.1)\n",
-    "\"\"\"\n",
-    "name_snippet_pairs[image_full_name] = snippet"
+    "        self.camera.frame.scale(1/8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "2f225fbf-f5c6-4d44-8aa6-722d28b8c6ef",
    "metadata": {},
    "outputs": [
@@ -419,27 +371,19 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/example.png\n",
+    "%%capture_png imgs/Dot_set_color_by_gradient.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
-    "        mob = Dot(radius=2.0) \n",
-    "        mob.set_color_by_gradient([PINK, BLUE])\n",
+    "        mob = Dot(radius=2.0)  #ONLY\n",
+    "        mob.set_color_by_gradient([PINK, BLUE]) #ONLY\n",
     "        self.add(mob)\n",
-    "        self.camera.frame.scale(1/1.6)\n",
-    "\n",
-    "###******        \n",
-    "image_full_name = \"Dot_set_color_by_gradient.png\"\n",
-    "snippet = r\"\"\"\n",
-    "mob = Dot(radius=2.0) \n",
-    "mob.set_color_by_gradient([PINK, BLUE])\n",
-    "self.add(mob)\"\"\"\n",
-    "name_snippet_pairs[image_full_name] = snippet"
+    "        self.camera.frame.scale(1/1.6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "d6639c07-9a3b-4d8a-a1ad-b56f4d35b706",
    "metadata": {},
    "outputs": [
@@ -455,30 +399,26 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/example.png\n",
+    "%%capture_png imgs/Polygon_set_color.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
-    "        mob = Polygon([-1, .5, 0], [-.5, 2, 0], [1, 2, 0], [1.5, .5, 0], [.25, -.5, 0], sheen_direction = UP)\n",
-    "        mob.set_fill(opacity=.5)\n",
-    "        mob.set_color([TEAL, RED, YELLOW])\n",
-    "        mob.set_stroke(width=8)\n",
-    "        mob.move_to(ORIGIN)\n",
+    "        mob = Polygon([-1, .5, 0], [-.5, 2, 0], [1, 2, 0], [1.5, .5, 0], [.25, -.5, 0], sheen_direction = UP) #ONLY\n",
+    "        mob.set_fill(opacity=.5) #ONLY\n",
+    "        mob.set_color([TEAL, RED, YELLOW]) #ONLY\n",
+    "        mob.set_stroke(width=8) #ONLY\n",
+    "        mob.move_to(ORIGIN) #ONLY\n",
     "        self.add(mob)\n",
-    "        self.camera.frame.scale(1/2.2)\n",
-    "\n",
-    "\n",
-    "###******        \n",
-    "image_full_name = \"Polygon_set_color.png\"\n",
-    "snippet = r\"\"\"\n",
-    "mob = Polygon([-1, .5, 0], [-.5, 2, 0], [1, 2, 0], [1.5, .5, 0], [.25, -.5, 0], sheen_direction = UP)\n",
-    "mob.set_fill(opacity=.5)\n",
-    "mob.set_color([TEAL, RED, YELLOW])\n",
-    "mob.set_stroke(width=8)\n",
-    "mob.move_to(ORIGIN)\n",
-    "\"\"\"\n",
-    "name_snippet_pairs[image_full_name] = snippet"
+    "        self.camera.frame.scale(1/2.2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1431a597",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
