--- a/02Mobjects_Text.ipynb
+++ b/02Mobjects_Text.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "e64dbae4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.13.0</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m13.0\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import json\n",
     "import time\n",
@@ -108,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -135,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "83dea982-bd01-4677-8f52-c0c0cc03b294",
    "metadata": {},
    "outputs": [
@@ -162,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "6b947937-3554-42af-95d5-cc07a958b0bc",
    "metadata": {},
    "outputs": [
@@ -190,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "3d6c9d9f-d32d-4811-8b47-2d768d062624",
    "metadata": {},
    "outputs": [
@@ -217,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "38447001-be94-4df2-b101-645036c6c3a1",
    "metadata": {},
    "outputs": [
@@ -244,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "0e138520-2111-459b-801a-a074c36587d2",
    "metadata": {},
    "outputs": [
@@ -275,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "f5c9059c-f2dc-4219-b5bb-f8bcea454323",
    "metadata": {},
    "outputs": [
@@ -304,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "91267955-c0a4-4184-8149-6b71e6c3158a",
    "metadata": {},
    "outputs": [
