--- a/03Camera_and_Style.ipynb
+++ b/03Camera_and_Style.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.13.0</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m13.0\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import json\n",
     "import time\n",
@@ -100,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -128,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "91267955-c0a4-4184-8149-6b71e6c3158a",
    "metadata": {},
    "outputs": [
@@ -157,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "c05ff57a-5c0e-4c47-89eb-1291957b9058",
    "metadata": {},
    "outputs": [
@@ -187,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "9081dc78-4d62-43b9-8d9e-3d0ee2ac1ebd",
    "metadata": {},
    "outputs": [
@@ -216,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "18d57f08-f2cf-4669-9fc1-ff8bfc9923f5",
    "metadata": {},
    "outputs": [
@@ -245,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "13920380-cc5a-4b29-8b04-e09234087006",
    "metadata": {},
    "outputs": [
@@ -273,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "9c1c3bdb-969f-4f0b-af22-3987d2622205",
    "metadata": {},
    "outputs": [
@@ -301,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "c185b1ae-23fa-46d5-a7de-ef5efa071770",
    "metadata": {},
    "outputs": [
@@ -327,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "fd9e6794-9c74-498f-afa5-6f385816abdd",
    "metadata": {},
    "outputs": [
@@ -355,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "2f225fbf-f5c6-4d44-8aa6-722d28b8c6ef",
    "metadata": {},
    "outputs": [
@@ -383,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "d6639c07-9a3b-4d8a-a1ad-b56f4d35b706",
    "metadata": {},
    "outputs": [
