added all basic mobjects

--- a/04Plots.ipynb
+++ b/04Plots.ipynb
@@ -162,7 +162,7 @@
     "%%capture_png imgs/Axes_zoom.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):  \n",
-    "    def __init__(self, **kwargs):  \n",
+    "    def __init__(self, **kwargs):   #HEREFROM\n",
     "        ZoomedScene.__init__( \n",
     "            self, \n",
     "            zoom_factor=0.1, \n",
@@ -194,7 +194,7 @@
     "        self.zoomed_display.shift(3*LEFT+0.4*UP)  \n",
     "        self.camera.frame.scale(1/2)  \n",
     "        self.camera.frame.shift(UR*1)  \n",
-    "        self.add(ax, graph)  "
+    "        self.add(ax, graph)  #HERETO"
    ]
   },
   {
