--- a/01Mobjects_Basics.ipynb
+++ b/01Mobjects_Basics.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.13.0</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m13.0\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import json\n",
     "import time\n",
@@ -101,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "3d228c15",
    "metadata": {},
    "outputs": [
@@ -129,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "ad594e35",
    "metadata": {},
    "outputs": [
@@ -158,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "018cfefa-c0ba-4888-81f1-664cc46117dd",
    "metadata": {},
    "outputs": [
@@ -187,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "cd2434de-f766-4d7d-9aee-af607580a62b",
    "metadata": {},
    "outputs": [
@@ -216,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "4e833fa8-c565-451e-8642-5a91fbf678bb",
    "metadata": {},
    "outputs": [
@@ -246,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "ce890072-a608-4654-941b-198b4dd37280",
    "metadata": {},
    "outputs": [
@@ -275,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "a2419fa8-c61a-4ced-b0ad-ef4f36871c36",
    "metadata": {},
    "outputs": [
@@ -305,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "0496a236-a7a0-4061-beeb-a967e243f1da",
    "metadata": {},
    "outputs": [
@@ -333,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "e005acdc-f622-411a-a70e-c24209f60e2a",
    "metadata": {},
    "outputs": [
@@ -361,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "409e3089-3bdf-4e25-8007-b587e9471d83",
    "metadata": {},
    "outputs": [
@@ -391,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "id": "78d4b603",
    "metadata": {},
    "outputs": [
@@ -419,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "2b689818-b83e-4413-b994-54b77151a132",
    "metadata": {},
    "outputs": [
@@ -447,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "id": "6b6b0f51-63be-4b30-b54d-fd9a1a143dcd",
    "metadata": {},
    "outputs": [
@@ -475,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "id": "afaeb917-27c3-4e57-b14b-70cc492c341c",
    "metadata": {},
    "outputs": [
@@ -503,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "id": "21d7e7b2-6029-47ac-8fbe-fcddc37bbcab",
    "metadata": {},
    "outputs": [
@@ -531,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "id": "5a41408c-75be-4254-9633-9e35d30d6610",
    "metadata": {},
    "outputs": [
@@ -559,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "id": "0f321ac7-0d7e-4eb3-8fb6-011011db1df2",
    "metadata": {},
    "outputs": [
@@ -588,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "id": "5ee3dd09-db56-4c70-b098-f54454b33e8b",
    "metadata": {},
    "outputs": [
@@ -617,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "id": "558c5450-16f7-40e7-be3e-5a6a192c3a55",
    "metadata": {},
    "outputs": [
@@ -649,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "id": "9075a9c7-0eff-4eea-8ce7-dc533bc54120",
    "metadata": {},
    "outputs": [
@@ -678,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "id": "63dba20a-2cb2-42e6-b18c-21153203cf7e",
    "metadata": {},
    "outputs": [
@@ -707,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 23,
    "id": "ca89b62d",
    "metadata": {},
    "outputs": [
@@ -736,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 24,
    "id": "c9fea1a6-65bd-4f44-b219-7e6cd095654f",
    "metadata": {},
    "outputs": [
@@ -765,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "id": "2173c493-be26-4511-80df-0967d2e5baf1",
    "metadata": {},
    "outputs": [
@@ -794,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 26,
    "id": "e56044ca-139f-45c5-9fa9-1e38a02dca64",
    "metadata": {},
    "outputs": [
@@ -823,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 27,
    "id": "6c2351d7-d630-4a8c-9ad9-a669722922a1",
    "metadata": {},
    "outputs": [
@@ -852,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 28,
    "id": "79054cc7-29d7-4906-9c7b-8c6ad44c4465",
    "metadata": {},
    "outputs": [
@@ -881,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 29,
    "id": "03b6d39c-b7b7-402b-a94a-7383f06b21fd",
    "metadata": {},
    "outputs": [
@@ -910,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 30,
    "id": "c8f2ad7f-1261-45c7-8d69-7d34da236ce0",
    "metadata": {},
    "outputs": [
@@ -941,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 31,
    "id": "6e3edf8f-e778-4931-af35-0af321ecd4c5",
    "metadata": {},
    "outputs": [
@@ -973,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 32,
    "id": "ceac2833-1f62-4e94-a7b0-2e988eeac329",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 33,
    "id": "c34b1c3f-eede-4e72-ad36-c2abec194ffa",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 34,
    "id": "8f13d671-c505-4993-b1a2-9c61dc28c83f",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 35,
    "id": "b6754f9d-8fab-47a6-bb5c-dca97b75e25e",
    "metadata": {},
    "outputs": [
@@ -1091,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 36,
    "id": "f712a179-5e9d-4907-9f17-0448dd26f834",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 37,
    "id": "f2cf8509-de93-4341-9d88-abd2c863bf07",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 38,
    "id": "392cb493-1d25-454f-a93b-0cbd6ae19e4d",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 39,
    "id": "2616b54b-98c4-4171-bec6-7e9cdf55968a",
    "metadata": {},
    "outputs": [
@@ -1199,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 40,
    "id": "f1517126-246d-4361-93fb-77d8620c5384",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 41,
    "id": "8120aa72-aa99-4078-9859-a8fada7c9167",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 42,
    "id": "1870a184-e3af-4d34-a62f-371b4a56fd41",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 43,
    "id": "c48a4917-bb93-470e-aaff-d1bf3b25dd91",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 44,
    "id": "88044daa-ecb8-42d5-8d5f-ab0427b1be5f",
    "metadata": {},
    "outputs": [
@@ -1344,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 45,
    "id": "28d88d10-6527-4101-ab2e-3420071b79d4",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 46,
    "id": "7a1d9778-4e1a-41a8-84a4-187a6550086a",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 47,
    "id": "7893fe85-5177-4e3a-8d85-728e77bf2442",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 48,
    "id": "facb7539-059f-4e30-8098-ac04b970666e",
    "metadata": {},
    "outputs": [
@@ -1457,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 49,
    "id": "e8419e42-4c11-4bab-a864-9e8a97d86e91",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 50,
    "id": "9c45f8b6-4d94-461f-a758-150683353456",
    "metadata": {},
    "outputs": [
@@ -1533,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 51,
    "id": "6f793b8a-5987-496a-91ff-9203b49e6f0a",
    "metadata": {},
    "outputs": [
@@ -1565,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 52,
    "id": "29443491-d1fa-4001-bdbc-5465f4c2d4be",
    "metadata": {},
    "outputs": [
@@ -1596,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 53,
    "id": "67479843-49ca-48be-95b1-f335746119f7",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 54,
    "id": "294bfe52-956e-44e3-9bbc-8b15144c69a7",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 55,
    "id": "0c2ea233-0685-4d02-bf1b-cfa5c481e075",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 56,
    "id": "afc7349a-1d0f-4ffb-aea4-8f1fcff18054",
    "metadata": {},
    "outputs": [
@@ -1714,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 57,
    "id": "b835bb28-b605-4c9c-bbac-3de6661a46f3",
    "metadata": {},
    "outputs": [
@@ -1746,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 58,
    "id": "fbb9aa6e-9554-4aea-81c6-96bd598ddf9e",
    "metadata": {},
    "outputs": [
@@ -1781,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 59,
    "id": "db095c8d-e00f-4fb2-bbf8-670358daa9f2",
    "metadata": {},
    "outputs": [
@@ -1813,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 60,
    "id": "ab229e3b-c831-4cb2-8bad-6e61717b0263",
    "metadata": {},
    "outputs": [
@@ -1845,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 61,
    "id": "39c5518d-2cf7-414c-a4e3-b2d5ed032406",
    "metadata": {},
    "outputs": [
@@ -1885,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 62,
    "id": "c3f34606-da32-4b52-bc79-3dc83425bbd3",
    "metadata": {},
    "outputs": [
@@ -1920,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 63,
    "id": "9b486165-84d2-48cf-8af3-b78b18516aa5",
    "metadata": {},
    "outputs": [
@@ -1955,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 64,
    "id": "2a0d2f63-9f22-4b42-8cfc-d2ca71503469",
    "metadata": {},
    "outputs": [
@@ -1989,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 65,
    "id": "7a0cabfb-42b3-4957-af92-53aefe4dcb75",
    "metadata": {},
    "outputs": [
@@ -2031,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 66,
    "id": "1e7803e8-45ef-4950-8bc6-83628197fbdb",
    "metadata": {},
    "outputs": [
