better json structure

--- a/03Camera_and_Style.ipynb
+++ b/03Camera_and_Style.ipynb
@@ -9,12 +9,12 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.13.0</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.14.0</span>\n",
        "\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m13.0\u001b[0m\n",
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m14.0\u001b[0m\n",
        "\n"
       ]
      },
@@ -29,6 +29,9 @@
     "from io import BytesIO, StringIO\n",
     "from IPython import get_ipython\n",
     "from IPython.core.magic import register_cell_magic\n",
+    "from IPython.utils.capture import capture_output\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "\n",
     "from manim import *\n",
     "params = f\" -v WARNING -r {80*4},{40*4} -s  --disable_caching Example\"\n",
     "import PIL\n",
@@ -83,19 +86,27 @@
     "    code_block = code_block.replace(\"'\", \"&#39;\") # make sure that javascript can read the single quote character\n",
     "    code_block = code_block.strip(\"\\n\")\n",
     "\n",
-    "    # read + update + write json\n",
     "    with open(joson_file_path, \"r\") as jsonFile:\n",
-    "        data = json.load(jsonFile)\n",
-    "        \n",
+    "            data = json.load(jsonFile)\n",
+    "\n",
     "    if not chapter_name in data:\n",
     "        data[chapter_name] = []\n",
     "\n",
-    "    chapter_content = data[chapter_name] \n",
-    "    chapter_content.append([{\"image\":path[5:], \"code\":code_block, \"css\":style}])\n",
+    "    chapter_content = data[chapter_name]\n",
+    "    chapter_content.append(\n",
+    "        {\"image_path\": path,\n",
+    "        \"celltype\": \"Normal\",\n",
+    "        \"css\": style,\n",
+    "        \"code\": code_block})\n",
     "\n",
-    "    data[chapter_name]  = chapter_content\n",
+    "    data[chapter_name] = chapter_content\n",
     "    with open(joson_file_path, \"w\") as jsonFile:\n",
     "        json.dump(data, jsonFile, indent=2, sort_keys=False)\n",
+    "\n",
+    "    shell = InteractiveShell.instance()\n",
+    "    # save the output\n",
+    "    with capture_output(stdout=False, stderr=False, display=True) as result:\n",
+    "        shell.run_cell(cell) # idea by @krassowski \n",
     "\n",
     "    # save image\n",
     "    for output in result.outputs:\n",
@@ -427,14 +438,6 @@
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/2.2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1431a597",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
