--- a/04Plots.ipynb
+++ b/04Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "from io import BytesIO, StringIO\n",
     "from IPython import get_ipython\n",
     "from IPython.core.magic import register_cell_magic\n",
-    "from manim import *\n",
+    "from IPython.utils.capture import capture_output\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
     "\n",
+    "from manim import *\n",
     "scale_res=1\n",
     "scale_res=4\n",
     "params = f\" -v WARNING -r {170*scale_res},{170*scale_res} -s  --disable_caching Example\"\n",
-    "\n",
     "import PIL\n",
     "\n",
     "\n",
@@ -71,19 +72,27 @@
     "    code_block = code_block.replace(\"'\", \"&#39;\") # make sure that javascript can read the single quote character\n",
     "    code_block = code_block.strip(\"\\n\")\n",
     "\n",
-    "    # read + update + write json\n",
     "    with open(joson_file_path, \"r\") as jsonFile:\n",
-    "        data = json.load(jsonFile)\n",
-    "        \n",
+    "            data = json.load(jsonFile)\n",
+    "\n",
     "    if not chapter_name in data:\n",
     "        data[chapter_name] = []\n",
     "\n",
-    "    chapter_content = data[chapter_name] \n",
-    "    chapter_content.append([{\"image\":path[5:], \"code\":code_block, \"css\":style}])\n",
+    "    chapter_content = data[chapter_name]\n",
+    "    chapter_content.append(\n",
+    "        {\"image_path\": path,\n",
+    "        \"celltype\": \"Normal\",\n",
+    "        \"css\": style,\n",
+    "        \"code\": code_block})\n",
     "\n",
-    "    data[chapter_name]  = chapter_content\n",
+    "    data[chapter_name] = chapter_content\n",
     "    with open(joson_file_path, \"w\") as jsonFile:\n",
     "        json.dump(data, jsonFile, indent=2, sort_keys=False)\n",
+    "\n",
+    "    shell = InteractiveShell.instance()\n",
+    "    # save the output\n",
+    "    with capture_output(stdout=False, stderr=False, display=True) as result:\n",
+    "        shell.run_cell(cell) # idea by @krassowski \n",
     "\n",
     "    # save image\n",
     "    for output in result.outputs:\n",
@@ -98,13 +107,14 @@
     "            image = PIL.Image.open(bytes_io)\n",
     "            image.save(path, 'png')\n",
     "\n",
+    "\n",
     "joson_file_path = \"imgs/gallery_parameters.json\"\n",
     "chapter_name = \"Plots\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "b8d3c13e-e854-4983-82b4-45ddfc804dae",
    "metadata": {},
    "outputs": [
@@ -199,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "35509390-2b98-45e7-885e-f7d0a9700b49",
    "metadata": {},
    "outputs": [
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "9fe21ed2-4d17-4d2a-979a-d8de5af532b0",
    "metadata": {},
    "outputs": [
@@ -262,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "651c7d5e-2fc7-4672-aa57-5cc38452cced",
    "metadata": {},
    "outputs": [
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "b34b2a9b-43bc-4732-aac5-2901ba85f1df",
    "metadata": {},
    "outputs": [
@@ -325,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "f216076f-1189-47ae-913b-ed509627dd45",
    "metadata": {},
    "outputs": [
@@ -350,14 +360,6 @@
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4f2b88b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
