renamed imgs to gallery_assets

--- a/02Mobjects_Text.ipynb
+++ b/02Mobjects_Text.ipynb
@@ -121,7 +121,7 @@
     "            image = PIL.Image.open(bytes_io)\n",
     "            image.save(path, 'png')\n",
     "\n",
-    "joson_file_path = \"imgs/gallery_parameters.json\"\n",
+    "joson_file_path = \"gallery_assets/gallery_parameters.json\"\n",
     "chapter_name = \"Text\"\n"
    ]
   },
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Text1.png\n",
+    "%%capture_png gallery_assets/Text1.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -170,7 +170,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Text2.png\n",
+    "%%capture_png gallery_assets/Text2.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Underline.png\n",
+    "%%capture_png gallery_assets/Underline.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Bold.png\n",
+    "%%capture_png gallery_assets/Bold.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -252,7 +252,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/MathTex.png\n",
+    "%%capture_png gallery_assets/MathTex.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -279,7 +279,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/MathTex_stix2.png\n",
+    "%%capture_png gallery_assets/MathTex_stix2.png\n",
     "%%manim $params\n",
     "\n",
     "class Example(ZoomedScene):\n",
@@ -310,7 +310,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/MathTex2.png\n",
+    "%%capture_png gallery_assets/MathTex2.png\n",
     "%%manim $params\n",
     "MathTex.set_default()\n",
     "class Example(ZoomedScene):\n",
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Check.png\n",
+    "%%capture_png gallery_assets/Check.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
