--- a/03Camera_and_Style.ipynb
+++ b/03Camera_and_Style.ipynb
@@ -121,7 +121,7 @@
     "            image = PIL.Image.open(bytes_io)\n",
     "            image.save(path, 'png')\n",
     "\n",
-    "joson_file_path = \"imgs/gallery_parameters.json\"\n",
+    "joson_file_path = \"gallery_assets/gallery_parameters.json\"\n",
     "chapter_name = \"Camera and Style\"\n"
    ]
   },
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Background.png\n",
+    "%%capture_png gallery_assets/Background.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/ZoomIN.png\n",
+    "%%capture_png gallery_assets/ZoomIN.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -200,7 +200,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/ZoomOUT.png\n",
+    "%%capture_png gallery_assets/ZoomOUT.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/CameraLEFT.png\n",
+    "%%capture_png gallery_assets/CameraLEFT.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/CameraUP.png\n",
+    "%%capture_png gallery_assets/CameraUP.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/MatchHEIGHT.png\n",
+    "%%capture_png gallery_assets/MatchHEIGHT.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -316,7 +316,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/MatchWIDTH.png\n",
+    "%%capture_png gallery_assets/MatchWIDTH.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/FullScreenRectangle.png\n",
+    "%%capture_png gallery_assets/FullScreenRectangle.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -370,7 +370,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/SurroundingRectangle.png\n",
+    "%%capture_png gallery_assets/SurroundingRectangle.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -398,7 +398,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Dot_set_color_by_gradient.png\n",
+    "%%capture_png gallery_assets/Dot_set_color_by_gradient.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -426,7 +426,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Polygon_set_color.png\n",
+    "%%capture_png gallery_assets/Polygon_set_color.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
