--- a/04Plots.ipynb
+++ b/04Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
    "outputs": [],
@@ -108,13 +108,13 @@
     "            image.save(path, 'png')\n",
     "\n",
     "\n",
-    "joson_file_path = \"imgs/gallery_parameters.json\"\n",
+    "joson_file_path = \"gallery_assets/gallery_parameters.json\"\n",
     "chapter_name = \"Plots\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png gallery_assets/Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
     "\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "b8d3c13e-e854-4983-82b4-45ddfc804dae",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Axes_zoom.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png gallery_assets/Axes_zoom.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):  \n",
     "    def __init__(self, **kwargs):   #HEREFROM\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "35509390-2b98-45e7-885e-f7d0a9700b49",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/ComplexPlane.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png gallery_assets/ComplexPlane.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "9fe21ed2-4d17-4d2a-979a-d8de5af532b0",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/PolarPlane.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png gallery_assets/PolarPlane.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "651c7d5e-2fc7-4672-aa57-5cc38452cced",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/Graph_with_Number.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png gallery_assets/Graph_with_Number.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "b34b2a9b-43bc-4732-aac5-2901ba85f1df",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/StreamLines.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png gallery_assets/StreamLines.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "f216076f-1189-47ae-913b-ed509627dd45",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
     }
    ],
    "source": [
-    "%%capture_png imgs/ArrowVectorField.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png gallery_assets/ArrowVectorField.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
